--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   },
   "dependencies": {
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "core-js": "^3.12.1",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.12",
+    "vue-chartjs": "^3.5.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
