--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "chart.js": "^2.9.3",
     "core-js": "^3.12.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.12",
     "vue-chartjs": "^3.5.0",
