--- a/package.json
+++ b/package.json
@@ -3,20 +3,21 @@
   "version": "1.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve --port 4000",
+    "client": "vue-cli-service serve --port 4000",
+    "server": "nodemon --inspect server/server.js",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "axios": "^0.21.1",
     "chart.js": "^2.9.3",
-    "core-js": "^3.12.1",
+    "core-js": "^3.15.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "register-service-worker": "^1.7.2",
-    "vue": "^2.6.12",
+    "vue": "^2.6.14",
     "vue-chartjs": "^3.5.0",
-    "vue-router": "^3.5.1",
+    "vue-router": "^3.5.2",
     "vuex": "^3.6.2"
   },
   "arch": "any",
@@ -29,7 +30,7 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "lint-staged": "^9.4.3",
-    "vue-template-compiler": "^2.6.12"
+    "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
     "root": true,
