--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "core-js": "^3.15.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "firebase": "^8.7.1",
     "register-service-worker": "^1.7.2",
     "vue": "^2.6.14",
     "vue-chartjs": "^3.5.0",
     "vue-router": "^3.5.2",
+    "vuefire": "^2.2.5",
     "vuex": "^3.6.2"
   },
   "arch": "any",
